syntax = "proto3";

option go_package = "./pb";
package pb;

message SendCodeRequest {
	string email = 1;
	string code = 2;
}

message SendCodeResponse {
}

service EmailCenter {
	rpc SendCode(SendCodeRequest) returns (SendCodeResponse);
}